CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_homeless_hist__x/fields/idn_sbsd_case_homeless__c.field-meta.xml
<CustomField>
    <fullName>idn_sbsd_case_homeless__c</fullName>
    <description>idn_sbsd_case_homeless</description>
    <externalDeveloperName>idn_sbsd_case_homeless</externalDeveloperName>
    <label>Homeless ID</label>
    <length>50</length>
    <referenceTargetField>T_SBSD_CASE_HOMELESS__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_SBSD_CASE_HOMELESS__c</referenceTo>
    <relationshipLabel>Case Homeless Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_sbsd_case_homeless_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>