CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_homeless_hist__x/fields/ind_is_homeless__c.field-meta.xml
<CustomField>
    <fullName>ind_is_homeless__c</fullName>
    <description>ind_is_homeless</description>
    <externalDeveloperName>ind_is_homeless</externalDeveloperName>
    <label>is homeless?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>