CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_homeless_hist__x/fields/ind_lvg_hotel__c.field-meta.xml
<CustomField>
    <fullName>ind_lvg_hotel__c</fullName>
    <description>ind_lvg_hotel</description>
    <externalDeveloperName>ind_lvg_hotel</externalDeveloperName>
    <label>Living in hotel or motel</label>
    <length>1</length>
    <type>Text</type>
</CustomField>