CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_homeless_hist__x/fields/ind_lvg_other__c.field-meta.xml
<CustomField>
    <fullName>ind_lvg_other__c</fullName>
    <description>ind_lvg_other</description>
    <externalDeveloperName>ind_lvg_other</externalDeveloperName>
    <label>Have a temporary living situation (pleas</label>
    <length>1</length>
    <type>Text</type>
</CustomField>