CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_homeless_hist__x/fields/ind_lvg_shelter__c.field-meta.xml
<CustomField>
    <fullName>ind_lvg_shelter__c</fullName>
    <description>ind_lvg_shelter</description>
    <externalDeveloperName>ind_lvg_shelter</externalDeveloperName>
    <label>Living in shelter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>