CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_homeless_hist__x/fields/ind_lvg_substandard__c.field-meta.xml
<CustomField>
    <fullName>ind_lvg_substandard__c</fullName>
    <description>ind_lvg_substandard</description>
    <externalDeveloperName>ind_lvg_substandard</externalDeveloperName>
    <label>Living in substandard housing such as ca</label>
    <length>1</length>
    <type>Text</type>
</CustomField>