CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_homeless_hist__x/fields/is_family_homeless__c.field-meta.xml
<CustomField>
    <fullName>is_family_homeless__c</fullName>
    <description>is_family_homeless</description>
    <externalDeveloperName>is_family_homeless</externalDeveloperName>
    <label>is homeless?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>