CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_homeless_hist__x/fields/nbr_seq_homeless__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_homeless__c</fullName>
    <description>nbr_seq_homeless</description>
    <externalDeveloperName>nbr_seq_homeless</externalDeveloperName>
    <label>Number Sequence homeless</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>