CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_homeless_hist__x/fields/txt_cmt__c.field-meta.xml
<CustomField>
    <fullName>txt_cmt__c</fullName>
    <description>txt_cmt</description>
    <externalDeveloperName>txt_cmt</externalDeveloperName>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>